Bug#8321 - myisampack bug in compression algorithm Added 64-bit extensions, comments, extended statistics and trace prints.